<resources>
    <string name="app_name">Journey Journal</string>
    <string name="googlesigning">894542828299-5aj4flh545m7ak9k2m7g3g098rgrr2ju.apps.googleusercontent.com</string>
    <string name="JourneyJournal">Journey-Journal</string>
    <string name="Login">Log In</string>
    <string name="journeyTitle">Keep Your Memories Forever</string>
    <string name="titleHint">Enter Journey title</string>
    <string name="descriptionHint">Description</string>
    <string name="yourLocation">Your Location</string>
    <string name="title_activity_location_access">LocationAccess</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="Signup">Sign up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="headerTitle">Here Take\nYour First\n Step</string>
    <string name="WelcomeBackTxt">Welcome Back</string>
    <string name="loginHeader">Login</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="heading">Keep Your Memories Forever</string>
    <string name="GetStarted">Get Started</string>
    <string name="signupHeader">Get Started</string>
    <string name="welcomeLand">Welcome To Journey Journal</string>
    <string name="journeyLand">Journey Journal</string>
    <string name="add">add</string>
    <string name="journalTitle">Keep your memories forever</string>
    <string name="titlehint">TITLE</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="calendar">Calendar</string>
    <string name="setting">Setting</string>
    <string name="cloud">Cloud</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="look">Search</string>
    <string name="noti">Notifications</string>
    <string name="more">More</string>
    <string name="Home">Home</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="theme">Theme</string>
    <string name="gallery">General</string>
    <string name="logout">Logout</string>
    <string name="shareapp">Share App</string>
    <string name="general">Setting</string>
    <string name="security">Security</string>
    <string name="faq">FAQ</string>
    <string name="follow">Follow Us</string>
    <string name="save">SAVE</string>
    <string name="locationHint">Location</string>
    <string name="update">UPDATE</string>
    <string name="updateTitle">Update your journal entry</string>
</resources>

