<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item android:id="@+id/home_menu"
            android:icon="@drawable/ic_home"
            android:title="@string/Home"/>

        <item android:id="@+id/general_menu"
            android:icon="@drawable/ic_setting"
            android:title="@string/gallery"/>

        <item android:id="@+id/theme_menu"
            android:icon="@drawable/ic_theme"
            android:title="@string/theme"/>

        <item android:id="@+id/share_menu"
            android:icon="@drawable/ic_share"
            android:title="@string/shareapp"/>

        <item android:id="@+id/help_menu"
            android:icon="@drawable/ic_help"
            android:title="@string/help"/>

        <item android:id="@+id/logout_menu"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>



    </group>

</menu>