<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <TextView
            android:id="@+id/landingHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/JourneyJournal"
            android:textSize="35dp"
            android:textStyle="bold"
            android:textColor="@color/primaryBlue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="80dp"
            />

<pl.droidsonroids.gif.GifImageView
    android:id="@+id/gif"
    android:layout_width="wrap_content"
    android:layout_height="550dp"
    app:layout_constraintTop_toBottomOf="@id/landingHeader"
    android:src="@drawable/traveling_gif"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginRight="30dp"
    android:layout_marginLeft="30dp"
    />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:paddingTop="10dp"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gif"
            android:padding="15dp"
            android:text="@string/Login"
            android:layout_marginLeft="10dp"
            android:textSize="25dp"
            android:textColor="@color/primaryBlue"
            android:textStyle="bold"
            android:backgroundTint="@color/primaryColor"
            app:strokeColor="@color/primaryColor"
            app:strokeWidth="2dp"
            app:cornerRadius="30dp"
            />
<!--        <com.google.android.material.button.MaterialButton-->
        <Button
            android:id="@+id/signupBtn"
            android:paddingTop="10dp"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gif"
            android:layout_marginRight="10dp"
            android:padding="15dp"
            android:text="@string/Signup"
            android:textSize="25dp"
            android:textColor="@color/primaryBlue"
            android:textStyle="bold"
            android:backgroundTint="@color/primaryGrey"
            app:strokeColor="@color/primaryGrey"
            app:strokeWidth="2dp"
            app:cornerRadius="30dp"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>