<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    tools:context=".ActivityEntryJournal">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/journeyTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/updateTitle"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-140dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Date"
        app:layout_constraintTop_toBottomOf="@id/journeyTitle"
        app:boxBackgroundColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/updateDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:drawableEnd="@drawable/ic_calendar"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/updateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titlehint"
        android:textSize="20dp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/dateLayout"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/updateDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descriptionHint"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/updateTitle"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/updateLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/locationHint"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/updateDescription"
        />

    <ImageView
        android:id="@+id/updateimageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/notes"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateLocation"
        />

    <!--    <androidx.appcompat.widget.AppCompatButton-->
    <!--        android:id="@+id/saveJournal"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:backgroundTint="@color/green"-->
    <!--        android:text="SAVE"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/imageView"-->
    <!--        android:textColor="@color/black"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        />-->


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/updateCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateimageView"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_camera_alt_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/updateGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_gallery" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/updateGallery"
        app:srcCompat="@drawable/ic_location" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/floatingActionButton3"
        app:srcCompat="@drawable/ic_sunny" />

    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
    <!--        android:id="@+id/floatingActionButton5"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:layout_marginBottom="16dp"-->
    <!--        android:backgroundTint="@color/primaryColor"-->
    <!--        android:clickable="true"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:srcCompat="@drawable/ic_emoji" />-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/updateJournal"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/primaryColor"
        android:text="@string/update"
        android:textColor="@color/black"
        android:textSize="13dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/floatingActionButton4"/>

</androidx.constraintlayout.widget.ConstraintLayout>