<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecSignupPage"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/signupTopGif"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/signup"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:id="@+id/signupHeader"
            app:layout_constraintTop_toBottomOf="@+id/signupTopGif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signupHeader"
            android:textColor="@color/fontBlueColor"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSelectHandle="@color/primaryColor"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputWrapper"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/name"
            app:boxStrokeColor="@color/primaryColor"
            app:hintTextColor="@color/purple_500"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/signupHeader"
            app:startIconContentDescription="@string/name"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="textPersonName"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputWrapper"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/email"
            app:boxStrokeColor="@color/primaryColor"
            app:hintTextColor="@color/purple_500"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/nameInputWrapper"
            app:startIconContentDescription="@string/email"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="textEmailAddress"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumberInputWrapper"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/phone"
            app:boxStrokeColor="@color/primaryColor"
            app:hintTextColor="@color/purple_500"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/emailInputWrapper"
            app:startIconContentDescription="@string/email"
            app:startIconDrawable="@drawable/ic_baseline_phone_android_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumberInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="phone"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputWrapper"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/password"
            app:boxStrokeColor="@color/primaryColor"
            app:hintTextColor="@color/purple_500"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberInputWrapper"
            app:passwordToggleEnabled="true"
            app:startIconContentDescription="@string/password"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="textPassword"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/secsignupButtonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/primaryColor"
            android:padding="12dp"
            android:text="Sign up"
            android:textColor="@color/fontBlueColor"
            android:textSize="20dp"
            android:textStyle="bold"
            app:cornerRadius="25dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordInputWrapper" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Already have an account? Log in."
            android:textAlignment="center"
            android:textColor="@color/fadedBlack"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@+id/secsignupButtonId"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
