<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/loginTopGif"
            android:layout_width="wrap_content"
            android:layout_height="270dp"
            android:src="@drawable/account"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <TextView
            android:id="@+id/loginHeader"
            app:layout_constraintTop_toBottomOf="@+id/loginTopGif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/WelcomeBackTxt"
            android:textColor="@color/fontBlueColor"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSelectHandle="@color/primaryColor"
            />


        <!--            <EditText-->
        <!--                android:id="@+id/emailInput"-->
        <!--                android:layout_marginTop="35dp"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                app:layout_constraintTop_toBottomOf="@+id/loginSubHeading"-->
        <!--                android:layout_marginLeft="30dp"-->
        <!--                android:layout_marginRight="30dp"-->
        <!--                android:hint="Email"-->
        <!--                />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/primaryColor"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:layout_constraintTop_toBottomOf="@+id/loginHeader"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="Email"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/white"

                />

        </com.google.android.material.textfield.TextInputLayout>
        <!--            <EditText-->
        <!--                android:id="@+id/passwordInput"-->
        <!--                android:layout_marginTop="20dp"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                app:layout_constraintTop_toBottomOf="@+id/emailInput"-->
        <!--                android:layout_marginLeft="30dp"-->
        <!--                android:layout_marginRight="30dp"-->
        <!--                android:hint="Password"-->
        <!--                />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/emailInput"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconContentDescription="@string/password"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="@color/primaryColor"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:backgroundTint="@color/white"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButtonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/loginHeader"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/passwordInput"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/fontBlueColor"
            android:backgroundTint="@color/primaryColor"
            android:padding="12dp"
            app:cornerRadius="25dp"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotPassword"
            app:layout_constraintTop_toBottomOf="@id/loginButtonId"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/fontBlueColor"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>